<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LTDD_W04</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">User :</string>
    <string name="password">Password :</string>
    <!-- <string name="edittext_username_hint">Your username here</string> -->
    <string name="edittext_username_hint">nhom23</string>
    <!-- <string name="edittext_password_hint">Your password here</string> -->
    <string name="edittext_password_hint">123</string>
    <string name="text_login">login</string>
    <string name="text_username_not_found">Username not found!!!</string>
    <string name="text_password_wrong">Password was wrong!!!</string>
    <string name="text_login_correct">Welcome!</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="text_search">Search</string>
    <string name="text_quit">Quit</string>

</resources>